# fetching-cli

./: .gitignore  Cargo.toml  README.md  bump_and_tag.sh  flake.nix
.github/workflows/: ci.yml  release.yml
docs/: album_1.json  album_2.json  artist_1.json  artist_2.json  episode_1.json  no_track_use_alternative.json  playlist_1.json  show_1.json  track_1.json  track_2.json
src/: audio.rs  auth.rs  credentials.rs  error.rs  main.rs  metadata.rs  session.rs
