[package]
name = "fetching-cli"
version = "0.1.1"
edition = "2021"
description = "Minimal self-contained CLI for Spotify via librespot"

[[bin]]
name = "fetching-cli"
path = "src/main.rs"

[dependencies]
librespot-core = "0.8.0"
librespot-metadata = "0.8.0"
librespot-audio = "0.8.0"
librespot-oauth = "0.8.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
hex = "0.4"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
